--- a/store-app-be-portal/appsettings.json
+++ b/store-app-be-portal/appsettings.json
@@ -6,12 +6,15 @@
     }
   },
   "AllowedHosts": "*",
+  "GrpcServices": {
+    "ProductService": "http://localhost:5152"
+  },
   "ReverseProxy": {
     "Routes": {
       "route1": {
         "ClusterId": "cluster1",
         "Match": {
-          "Path": "{**catch-all}"
+          "Path": "UserService/{**catch-all}"
         }
       }
     },
